styles.css
body {
    margin: 0;
    padding: 0;
    font-family: "Roboto", "Amiko", sans-serif;

}
footer {
    margin: 0;
    background-color: #1F2937;
}
.container {
    display: flex;
    flex-direction: column;
}
.hero {
    background-color: #1F2937;
    display: flex;
    flex-direction: column;

}
.navbar {
    display: flex;
    justify-content: space-around;
    margin: 8px 48px;
    
}
ul {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    gap: 16px;
}
.navbar h1 {
    margin: 0 ;
}
.parabutton {
    display: flex;
    flex-direction: column;
    align-self: flex-start;
    flex: 0 1 auto;
}
.placeholder {
    display: flex;
    flex: 1 0 auto;
    width: 100%;
    max-width: 400px;
    justify-content: center;
    align-items: center;
    background-color: gray;
    color: white;
    margin: 0 0 48px 0;
    height: 200px;
}
.wrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}
#maintext {
    font-size: 48px;
    font-weight: 900;
    color: #f9faf8;
}
#secondtext {
    font-size: 18px;
    color: #E5E7EB;
}
.parabutton button {
    background-color: #3882f6;
    color: white;
    text-align: center;
    padding: 4px 8px;
    flex: 0 0 auto;
    width: 100px;
    margin: 0;
    border-radius: 10px;
}

